Fixed alignment of cards

--- a/src/index.css
+++ b/src/index.css
@@ -7,9 +7,10 @@ h1 {
 }
 
 .product-holder {
+    margin: 0px 40px;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    gap: 20px;
+    gap: 30px;
     border: 1px;
     width: 50%;
 }
